--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -33,62 +33,83 @@
                     </div>
                 </div>
             </div>
-            <div formArrayName="multiLevelForm" class="multilevelform">
-                <div class="wrapper" *ngFor="let formGroup of multiLevelForm.controls; let i = index">
-                    <ng-container formGroupName="{{i}}">
-                        <div class="row">
-                            <div class="condition">
-                                <mat-form-field appearance="outline">
-                                    <mat-select>
-                                        <mat-option formControlName="condition"></mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </div>
-                            <div class="form-content">
-                                <div class="wrapper">
-                                    <div class="row">
-                                        <div class="item">
-                                            <mat-form-field appearance="outline">
-                                                <mat-select>
-                                                    <mat-option formControlName="column"></mat-option>
-                                                </mat-select>
-                                            </mat-form-field>
+            <div formArrayName="multiplyFilter" class="multilevelform">
+                <div class="wrapper">
+                    <div class="multilevelform__item" *ngFor="let formGroup of multiplyFilter.controls; let i = index">
+                        <ng-container formGroupName="{{i}}">
+                            <div class="row">
+                                <div class="condition">
+                                    <mat-form-field appearance="outline">
+                                        <mat-select formControlName="condition">
+                                            <mat-option 
+                                                *ngFor="let item of [{key: 'and', value: 'And'}, {key: 'or', value: 'Or'}]"
+                                                [value]="item.key">
+                                                {{ item.value }}
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div class="form-content" formArrayName="content">
+                                    <div class="wrapper">
+                                        <div *ngFor="let form of contentArray(i).controls; let i = index">
+                                            <ng-container formGroupName="{{ i }}">
+                                                <div class="row">
+                                                    <span>Where</span>
+                                                    <div class="item">
+                                                        <mat-form-field appearance="outline">
+                                                            <mat-select formControlName="column">
+                                                                <mat-option></mat-option>
+                                                            </mat-select>
+                                                        </mat-form-field>
+                                                    </div>
+                                                    <div class="item">
+                                                        <mat-form-field appearance="outline">
+                                                            <mat-select formControlName="operand">
+                                                                <mat-option></mat-option>
+                                                            </mat-select>
+                                                        </mat-form-field>
+                                                    </div>
+                                                    <div class="item">
+                                                        <mat-form-field appearance="outline">
+                                                            <mat-select formControlName="value">
+                                                                <mat-option></mat-option>
+                                                            </mat-select>
+                                                        </mat-form-field>
+                                                    </div>
+
+                                                    <button mat-icon-button>
+                                                        <mat-icon>more_horiz</mat-icon>
+                                                    </button>
+                                                </div>
+                                            </ng-container>
                                         </div>
-                                        <div class="item">
-                                            <mat-form-field appearance="outline">
-                                                <mat-select>
-                                                    <mat-option formControlName="operand"></mat-option>
-                                                </mat-select>
-                                            </mat-form-field>
-                                        </div>
-                                        <div class="item">
-                                            <mat-form-field appearance="outline">
-                                                <mat-select>
-                                                    <mat-option formControlName="value"></mat-option>
-                                                </mat-select>
-                                            </mat-form-field>
-                                        </div>
-                                        <div>
-                                            <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-                                                <mat-icon>more_horiz</mat-icon>
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <footer>
-                                        <button mat-button [matMenuTriggerFor]="filter" >
+
+                                        <footer>
+                                            <button mat-button [matMenuTriggerFor]="filter">
+                                                Add Filter
                                                 <mat-icon>add</mat-icon>
-                                                Add a filter
-                                        </button>
-                                    </footer>
+                                            </button>
+                                            <mat-menu #filter="">
+                                                <button mat-menu-item (click)="addContentFilter(i)">
+                                                    <mat-icon>filter_alt</mat-icon>
+                                                    <span>Add Filter</span>
+                                                </button>
+                                                <button mat-menu-item (click)="addContentFilterGroup(i)">
+                                                    <mat-icon>filter_list</mat-icon>
+                                                    <span>Add a filter group</span>
+                                                </button>
+                                            </mat-menu>
+                                        </footer>
+                                    </div>
+                                </div>
+                                <div class="form-content-btn">
+                                    <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+                                        <mat-icon>more_horiz</mat-icon>
+                                    </button>
                                 </div>
                             </div>
-                            <div class="form-content-btn">
-                                <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-                                    <mat-icon>more_horiz</mat-icon>
-                                </button>
-                            </div>
-                        </div>
-                    </ng-container>
+                        </ng-container>
+                    </div>
                 </div>
             </div>
 
@@ -100,12 +121,12 @@
                 </button>
                 <mat-menu #filter="">
                     <button mat-menu-item>
-                        <mat-icon>filter_alt</mat-icon>
+                        <mat-icon>add</mat-icon>
                         <span>Add Filter</span>
                     </button>
-                    <button (click)="addMultilevelFilter()" mat-menu-item>
-                        <mat-icon>filter_list</mat-icon>
-                        <span>Add FilterGroup</span>
+                    <button (click)="addMultiplyFilter()" mat-menu-item>
+                        <mat-icon>library_add</mat-icon>
+                        <span>Add a filter group</span>
                     </button>
                 </mat-menu>
             </div>
