--- a/src/app/components/complex-form/complex-form.component.scss
+++ b/src/app/components/complex-form/complex-form.component.scss
@@ -3,15 +3,27 @@
 .form {
     max-width: 750px;
     width: 100%;
-    padding: 20px;
     margin: 30px auto;
     border: 1px solid #c3c3c3;
     border-radius: 6px;
+
+  &-content {
+    padding: 10px 10px 0 10px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-footer {
+    padding: 0 10px 10px 10px;
+    display: flex;
+  }
 }
 
 .row {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -19,4 +31,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.item {
+
+  & mat-form-field {
+    max-width: 150px;
+  }
+}
+
+.content {
+  padding: 6px;
+  border-radius: 6px;
+  background-color: #efefef;
 }
