--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -3,7 +3,7 @@
     <form class="form" [formGroup]="form">
         <div class="wrapper">
             <div class="">
-                <!--<div class="row">
+                <div class="row">
                     <span>Where</span>
                     <div>
                         <mat-form-field appearance="outline">
@@ -31,7 +31,7 @@
                             <mat-icon>more_horiz</mat-icon>
                         </button>
                     </div>
-                </div>-->
+                </div>
             </div>
             <div formArrayName="multiplyFilter" class="multilevelform">
                 <div class="wrapper">
