--- a/src/app/components/form-test/form-test.component.scss
+++ b/src/app/components/form-test/form-test.component.scss
@@ -12,3 +12,58 @@
     border-radius: 6px;
     border: 1px solid #c3c3c3;
 }
+
+.complex-form {
+    padding: 15px;
+    margin-bottom: 20px;
+    background-color: #fad8d8;
+    border-radius: 6px;
+}
+
+.one-level {
+
+    &__inner {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__item {
+
+        & mat-form-field {
+            width: 200px;
+        }
+    }
+}
+
+.multi-level {
+
+    &__inner {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__logicOperator {
+
+    }
+
+    &__content {
+        width: 78%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 5px;
+        background-color: #6387fc;
+        border-radius: 6px;
+    }
+}
+
+.item {
+
+    & mat-form-field {
+        width: 140px;
+    }
+}
