--- a/src/app/components/form-test/form-test.component.scss
+++ b/src/app/components/form-test/form-test.component.scss
@@ -62,7 +62,10 @@
 }
 
 .item {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     & mat-form-field {
         width: 140px;
     }
