--- a/src/app/components/form-test/form-test.component.scss
+++ b/src/app/components/form-test/form-test.component.scss
@@ -21,6 +21,9 @@
 }
 
 .one-level {
+    padding: 5px;
+    background-color: #f7dd89;
+    border-radius: 5px;
 
     &__inner {
         display: flex;
@@ -39,6 +42,10 @@
 
 .multi-level {
 
+    background-color: #d3fa48;
+    padding: 10px;
+    border-radius: 5px;
+
     &__inner {
         display: flex;
         flex-direction: row;
@@ -53,7 +60,7 @@
     &__content {
         width: 78%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
         padding: 5px;
         background-color: #6387fc;
